sample/retrieveUnpackaged/objects/Property_Contact_Person__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Person_Role__c</fullName>
        <label>Contact Person Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Manager Facilities Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Education (schools)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>waterMAP - Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>waterMAP - Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>waterMAP - Site Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Property_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Property_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Property Contact Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PropertyContact#{000000}</displayFormat>
        <label>Property Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Contact Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>